[gd_scene load_steps=9 format=3 uid="uid://01tmnbmsfsnf"]

[ext_resource type="Texture2D" uid="uid://ddf0nv4i304v7" path="res://assets/godotcon_assets/godoot_sprite.png" id="1_b0kkn"]
[ext_resource type="Script" uid="uid://laaa2vdnnx3f" path="res://entities/player_controller.gd" id="2_b0kkn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wwbr7"]
radius = 29.0

[sub_resource type="Animation" id="Animation_e4p34"]
length = 0.001

[sub_resource type="Animation" id="Animation_b0kkn"]
resource_name = "idle"
length = 2.0
loop_mode = 1

[sub_resource type="Animation" id="Animation_rfe5m"]
resource_name = "walking"
length = 1.5
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rfe5m"]
_data = {
&"RESET": SubResource("Animation_e4p34"),
&"idle": SubResource("Animation_b0kkn"),
&"walking": SubResource("Animation_rfe5m")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_b0kkn"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("AnimationPlayer:current_animation")
properties/1/spawn = true
properties/1/replication_mode = 2

[node name="Player" type="CharacterBody2D"]
collision_layer = 2

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(1, 0.537255, 0.278431, 1)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_b0kkn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 9)
shape = SubResource("CircleShape2D_wwbr7")

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("2_b0kkn")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rfe5m")
}

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = -54.0
offset_top = -122.0
offset_right = 53.0
offset_bottom = -60.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PlayerName"
horizontal_alignment = 1

[node name="PeerIdLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Peer Id"
horizontal_alignment = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_b0kkn")
